Inicijalna verzija sajta Stojkovic Gradnja

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<meta content="Stojković Gradnja AS" name="keywords">
 	<meta content="Stojković Gradnja AS" name="description">
+	<!-- Update commit message -->
+
 
 	<!-- Favicon -->
 	<link rel="icon" href="img/favicon.png">
